Closed Bug 1732778 Opened 3 years ago Closed 3 years ago

Simulcast SSRCs aren't in encoding order when RTX is on

Categories

(Core :: WebRTC: Signaling, defect, P1)

Firefox 93
defect

Tracking

()

RESOLVED FIXED
94 Branch
Tracking Status
firefox94 --- fixed

People

(Reporter: lennox, Assigned: drno)

Details

Attachments

(2 files)

This is a bug exposed by the fix to #1727196.

When simulcast video is sent, prior to the fix to #1727196, the SSRCs are listed in the local SDP in the order corresponding to the configured encodings array.

After that fix, however (i.e. when RTX SSRCs are signaled), the primary (non-RTX) SSRCs are instead listed in numeric-order, irrespective of which encodings they correspond to.

This is a problem for Jitsi-Meet, because the Jitsi Videobridge needs to know which SSRC corresponds to which encoding, for proper encoding routing.

(The correct solution here would be to use rid header extensions, and we're working on that, but it'll be a while.)

It looks like the fix should be as simple as just printing the SSRCs (and RTX SSRCs) in mSsrcs order in JsepTrack::AddToMSection.

It'd be great if this could get fixed before FF 93 hits stable.

Assignee: nobody → drno
Status: NEW → ASSIGNED

P1 so we can get it worked in for uplift.

Severity: -- → S3
Priority: -- → P2

S2 as it effects Jitsi in a non-trivial way.

Severity: S3 → S2
Priority: P2 → P1

Depends on D126998

Attachment #9243831 - Attachment description: WIP: Bug 1732778: added unit test for verifying SSRC order → Bug 1732778: added unit test for verifying SSRC order
Pushed by na-g@nostrum.com:
https://hg.mozilla.org/integration/autoland/rev/857e5d13da10
sort SSSRC with RTX the same as without. r=bwc
https://hg.mozilla.org/integration/autoland/rev/22fd68c02d1f
added unit test for verifying SSRC order r=bwc,ng
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: