Bug 1732778: sort SSSRC with RTX the same as without. r=bwc

Differential Revision: https://phabricator.services.mozilla.com/D126998